[project]
name = "ghscan"
version = "1.1.2"
description = "Map out a GitHub org's public footprint (org + contributor repos) and scan it with TruffleHog"
requires-python = ">=3.9"
license = { file = "LICENSE.md" }
dependencies = [
    "requests>=2.31",
]

[project.scripts]
ghscan = "ghscan.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ghscan*"]
